# erp-backend

./: Cargo.toml
domain/: Cargo.toml
domain/src/catalog/: attribute.rs  attribute_option.rs  category.rs
domain/src/measurement/: uom.rs
infra/: Cargo.toml
infra/src/: state.rs  uuid.rs
interface/src/attribute/: handler.rs  route.rs
interface/src/category/: handler.rs  route.rs
interface/src/uom/: handler.rs  route.rs
migration/src/: lib.rs  m20241210_030648_create_attribute_table.rs  m20241210_031041_create_attribute_option_table.rs
server/: Cargo.toml
server/src/: lib.rs
service/: Cargo.toml
service/src/catalog/: command.rs  definition.rs  error.rs  query.rs
service/src/measurement/: command.rs  definition.rs  error.rs  mod.rs  query.rs
