[package]
name = "vanphubinh_backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["server"]

[workspace.dependencies]
axum = "0.7.9"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies]
server = { path = "server" }
